# DESDE-CERO-SF

./: .gitignore  CMakeLists.txt  README.md
resources/: ground.mtl  sky.mtl
resources/Bandit/: Bandit.mtl
resources/Granga Fighter/: Granga Fighter.mtl
resources/Invader I/: Invader I.mtl
shaders/: simple_color_frag_shader.glsl
src/: Arwing.cpp  Arwing.h  Enemy.cpp  Enemy.h  Environment.cpp  Environment.h  Interface.cpp  Interface.h  main.cpp
web/: CMakeLists.txt  build.sh  main_web.cpp  shell.html
web/include/glad/: glad.h
web/shaders/: crosshair_frag_shader.glsl  crosshair_vert_shader.glsl  exhaust_frag_shader.glsl  exhaust_vert_shader.glsl  explosion_frag_shader.glsl  explosion_vert_shader.glsl  normal_frag_shader.glsl  simple_color_frag_shader.glsl  simple_color_vert_shader.glsl  texture_frag_shader.glsl  texture_vert_shader.glsl  vert_shader.glsl
